# rir-updater

./: .gitignore  README.md  config.example.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
src/rir_updater/: config.py  credentials.py  exceptions.py  main.py  summary.py
src/rir_updater/arin/: client.py
src/rir_updater/radb/: client.py
src/rir_updater/ripe/: client.py
tests/: test_config.py
tests/arin/: test_client.py
tests/radb/: test_client.py
tests/ripe/: test_client.py
