[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rir-updater"
version = "0.1.0"
description = "Scripts to update RIR (Regional Internet Registry) databases"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[project.scripts]
rir-updater = "rir_updater.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rir_updater"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
